体系与模型

--- a/doc/网络攻击原理与常用方法.md
+++ b/doc/网络攻击原理与常用方法.md
@@ -16,7 +16,14 @@
 恶意代码  
 拒绝服务  
 网络钓鱼  
-网络窃听  
+网络窃听："杂乱"模式可以接收整个网络上的信息包  
+SQL注入    
+社交工程  
+电子监听：无线电接收  
+会话劫持  
+漏洞扫描  
+代理技术：攻击跳板  
+数据加密：逃避追踪  
 
 端口扫描：  
 1、完全连接扫描：三次握手  
@@ -40,3 +47,13 @@
 6、死亡之ping，使icmp的包超64k，产生内存分配错误，使接收方停机  
 7、泪滴攻击，利用ip数据包分解与重组漏洞，通过加入偏移量，使重组错乱，产生不可预期的后果  
 8、分布式拒绝服务      
+
+黑客常用工具：  
+扫描器：NMAP、Nessus、SuperScan  
+远程监控：冰河、网络精灵、Netcat  
+密码破解：John the Ripper、LOphtCrack  
+网络嗅探器：Tcpdump、DSniff、WireShark  
+安全渗透工具箱：Metasploit、BackTrack5  
+
+根据扫描目的分类：  
+地址扫描器、端口扫描器、漏洞扫描器  
