--- a/doc/网络安全体系与网络安全模型.md
+++ b/doc/网络安全体系与网络安全模型.md
@@ -48,3 +48,19 @@ CMM5级：改进软件安全风险覆盖率、评估安全差距
 
 网络安全策略：涉及范围、有效期、所有者、责任、参考文件、策略主体内容、复查、违规处理  
 网络安全策略的建设内容：p76  
+网络安全管理体系构建内容：10个方面，p77（次要）    
+
+网络安全基础设施：  
+网络安全数字认证服务中心  
+网络安全运营中心  
+网络安全测评认证中心  
+
+网络安全等级保护制度2.0框架，p85（小房子）    
+智慧城市安全体系框架p86  
+智能交通网络安全评价体系p90  
+
+ISO 27000信息安全管理标准  
+主要步骤：计划、执行、检查、处理  
+
+美国国家标准与技术研究院（NIST）发布了《提升关键基础设施网络安全的框架》  
+核心是IPDRR，Identify、Protect、Detect、Respond、Recover  
